# tinylog

./: CMakeLists.txt
headers/: Logger.h
src/: Logger.cpp  logTest.cpp
